# submission_agent

./: .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
data/: candidate_profile.txt  data.txt  job_description.txt
src/agent/: agent.py
src/submission_agent.egg-info/: PKG-INFO  SOURCES.txt
