[project]
name = "submission_agent"
version = "0.1.0"
description = "NinjaHire submission agent"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
